# yet_another_curl_wrapper

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: app.c  main.c
src/include/: app.h  log.h
src/shaders/: shader.frag  shader.vert
